# demo-apps

./: README.md
Applications/ZylkerKart_Ecommerce/: .gitignore  README.md  docker-compose.yml
Applications/ZylkerKart_Ecommerce/db/: .dockerignore  01-schema.sql  Dockerfile
Applications/ZylkerKart_Ecommerce/services/payment-service/chaos-sdk/: README.md  pyproject.toml
Applications/ZylkerKart_Ecommerce/services/payment-service/chaos-sdk/src/site24x7_chaos/: __init__.py  config.py  engine.py  models.py
Applications/ZylkerKart_Ecommerce/services/payment-service/chaos-sdk/src/site24x7_chaos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Applications/ZylkerKart_Ecommerce/services/payment-service/chaos-sdk/src/site24x7_chaos/fastapi/: __init__.py  middleware.py
Applications/ZylkerKart_Ecommerce/services/payment-service/chaos-sdk/src/site24x7_chaos/fault/: database.py  http.py  http_client.py  redis_fault.py  resource.py
Applications/ZylkerKart_Ecommerce/services/payment-service/chaos-sdk/src/site24x7_chaos/flask/: __init__.py  middleware.py
Terraform Deployment/: .monitor_group_output.json  .site24x7_env_output.json  .terraform.lock.hcl  apm_monitors_state.json  eks.tf  k8s-resources.tf  main.tf  outputs.tf  site24x7_apm.tf  site24x7_chaos_agent.tf  terraform.tfstate  terraform.tfstate.1773819149.backup  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
Terraform Deployment/scripts/: delete_apm_monitors.ps1  fetch_and_store_apm.ps1  setup_site24x7_labs_env.ps1
(+150 files in other folders)
