[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site24x7-chaos"
version = "1.0.0"
description = "Site24x7 Labs Chaos SDK for Python — inject realistic faults into Flask and FastAPI applications"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{name = "Site24x7 Labs"}]

[project.optional-dependencies]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.68", "starlette>=0.14"]
sqlalchemy = ["sqlalchemy>=1.4"]
redis = ["redis>=4.0"]
requests = ["requests>=2.20"]
httpx = ["httpx>=0.23"]
all = [
    "flask>=2.0",
    "fastapi>=0.68",
    "starlette>=0.14",
    "sqlalchemy>=1.4",
    "redis>=4.0",
    "requests>=2.20",
    "httpx>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]
